March Localization II-update

--- a/learn-certs-pr/courses/20345-2.yml
+++ b/learn-certs-pr/courses/20345-2.yml
@@ -18,7 +18,7 @@ skillsGained:
 - skill: Nachrichtenspeicherung entwerfen und implementieren.
 - skill: Datenverlustrichtlinien, In-Place Hold und eDiscovery konzipieren und implementieren.
 - skill: NachrichtenKoexistenz unter Exchange Server Organisationen konzipieren und implementieren.
-- skill: Upgrade für frühere Versionen von Exchange Server : zu Exchange Server 2019 planen und implementieren
+- skill: 'Upgrade für frühere Versionen von Exchange Server : zu Exchange Server 2019 planen und implementieren'
 - skill: Hybride Exchange Bereitstellung planen
 learningPartnersLink: https://www.microsoft.com/learning/partners.aspx
 locales:
